--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,24 @@
-body {
-    background-color: azure;
+.active {
+    background-color: #4d1979;
+}
+li {
+    color: #4d1979;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
-.active {
+nav {
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+}
+
+a:link, a:visited{
+    color: #4d1979;
+}
+
+a.active {
     color: white;
-    background-color: purple;
 }
