--- a/css/main.css
+++ b/css/main.css
@@ -1,17 +1,13 @@
-.active {
-    background-color: #4d1979;
-}
+
 li {
     color: #4d1979;
-    padding-left: 5px;
-    padding-right: 5px;
 }
 
 nav {
     text-align: center;
 }
 
-h1 {
+h1, h5 {
     text-align: center;
 }
 
@@ -19,6 +15,3 @@ a:link, a:visited{
     color: #4d1979;
 }
 
-a.active {
-    color: white;
-}
